syntax = "proto3";

import "proton/android/pass/preferences/app_usage.proto";

option java_package = "proton.android.pass.preferences";
option java_multiple_files = true;

message InternalSettings {
  int64 last_unlock_time = 1;
  string declined_update_version = 2;
  int64 boot_count = 3;
  int32 home_sorting_option = 4;
  int32 autofill_sorting_option = 5;
  string selected_vault = 6;
  int32 pin_attempts = 7;
  int32 master_password_attempts = 8;
  int32 item_create_count = 9;
  bool in_app_review_triggered = 10;
  AppUsage app_usage = 11;
  int32 item_autofill_count = 12;
  int32 home_filtering_option = 13;
  bool dark_web_alias_message_dismissed = 14;
}
